@@ -89,8 +89,12 @@ otherwise the transformation and its inverse are the identity.
 if (is.character(object$dist)) 
 	    dd <- survreg.distributions[[object$dist]]
 else dd <- object$dist
+ytype <- attr(y, "type")
 if (is.null(dd$itrans)) {
     itrans <- dtrans <-function(x)x
+    # reprise the work done in survreg to create a transformed y
+    if (ytype=='left') y[,2] <- 2- y[,2]
+    else if (type=='interval' && all(y[,3]<3)) y <- y[,c(1,3)]
 }
 else {
     itrans <- dd$itrans
@@ -101,12 +105,12 @@ else {
     exactsurv <- y[,ncol(y)] ==1
     if (any(exactsurv)) logcorrect <-sum(log(dd$dtrans(y[exactsurv,1])))
 
-    if (type=='interval') {
+    if (ytype=='interval') {
         if (any(y[,3]==3))
             y <- cbind(tranfun(y[,1:2]), y[,3])
         else y <- cbind(tranfun(y[,1]), y[,3])
     }
-    else if (type=='left')
+    else if (ytype=='left')
         y <- cbind(tranfun(y[,1]), 2-y[,2])
     else     y <- cbind(tranfun(y[,1]), y[,2])
 }
